[package]
name = "dpso-directory"
version = "0.1.0"
authors = ["Mark Gross <mark.gross2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
features = ["client", "gateway", "model", "framework", "standard_framework", "rustls_backend"]
